# gpc_root

./: CClctrl.cpp  CGp.cpp  CGp.h  CKern.cpp  CKern.h  CMakeLists.txt  CNdlInterfaces.h  CNoise.cpp  CNoise.h  CTransform.cpp  CTransform.h  dummy_main.cpp  gp.cpp  gp_TH1.cpp  gp_TH1.h  gp_config.cpp  gp_config.h  lapack.h  makefile  ndlfortran.f  ndlutil.cpp  ndlutil.h
examples/: landau_histogram.root
